mobile font size updates

--- a/css/style.css
+++ b/css/style.css
@@ -1092,6 +1092,9 @@ nav li .active{
         padding-bottom: 80px;
     }
 
+    .intro_content h2{
+        font-size: 36px;
+    }
 }
 
 @media (min-width: 576px) and (max-width: 992px) {
